[project]
name = "clock"
description = "Live elapsed timer in the ComfyUI menu bar while your workflow runs"
version = "1.0.4"
license = { text = "MIT" }
classifiers = [
    # For OS-independent nodes (works on all operating systems)
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/austintraver/comfyui-clock"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/austintraver/comfyui-clock/wiki"
"Bug Tracker" = "https://github.com/austintraver/comfyui-clock/issues"

[tool.comfy]
PublisherId = "austintraver"
DisplayName = "ComfyUI Clock"
Icon = "https://raw.githubusercontent.com/austintraver/comfyui-clock/main/icon.svg"
includes = []
"requires-comfyui" = ">=0.4.0"  # ComfyUI version compatibility
